<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="handleClick"
            type="com.matdata.utils.ClickHandler" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorDustyWhite">

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="@drawable/waves_down"
            android:backgroundTint="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewTop" />

        <View
            android:id="@+id/viewTop"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/titleTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_16ssp"
            android:text="@string/settings"
            android:includeFontPadding="false"
            app:layout_constraintStart_toStartOf="@+id/viewTop"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/view2"
            app:layout_constraintBottom_toTopOf="@id/viewBottom">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/_28sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/bg_active_button"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:text="@string/tour_program"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/White"
                android:fontFamily="@font/poppins_medium"
                android:includeFontPadding="false"
                android:textAllCaps="false"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/_26sdp"
                android:layout_marginTop="@dimen/_14sdp"
                android:background="@drawable/bg_active_button"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:text="@string/development_work"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/White"
                android:fontFamily="@font/poppins_medium"
                android:includeFontPadding="false"
                android:textAllCaps="false"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/_26sdp"
                android:layout_marginTop="@dimen/_14sdp"
                android:background="@drawable/bg_active_button"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:text="@string/user_permission"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/White"
                android:fontFamily="@font/poppins_medium"
                android:includeFontPadding="false"
                android:textAllCaps="false"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/_26sdp"
                android:layout_marginTop="@dimen/_14sdp"
                android:background="@drawable/bg_active_button"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:text="@string/app_last_use"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/White"
                android:fontFamily="@font/poppins_medium"
                android:includeFontPadding="false"
                android:textAllCaps="false"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/_26sdp"
                android:layout_marginTop="@dimen/_14sdp"
                android:background="@drawable/bg_active_button"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:text="@string/work_progress"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/White"
                android:fontFamily="@font/poppins_medium"
                android:includeFontPadding="false"
                android:textAllCaps="false"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/_26sdp"
                android:layout_marginTop="@dimen/_14sdp"
                android:background="@drawable/bg_active_button"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:text="@string/see_birthday"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/White"
                android:fontFamily="@font/poppins_medium"
                android:includeFontPadding="false"
                android:textAllCaps="false"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/_26sdp"
                android:layout_marginTop="@dimen/_14sdp"
                android:background="@drawable/bg_active_button"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:text="@string/app_permission"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/White"
                android:fontFamily="@font/poppins_medium"
                android:includeFontPadding="false"
                android:textAllCaps="false"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/_26sdp"
                android:layout_marginTop="@dimen/_14sdp"
                android:background="@drawable/bg_active_button"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:text="@string/message_header_footer"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/White"
                android:fontFamily="@font/poppins_medium"
                android:includeFontPadding="false"
                android:textAllCaps="false"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/_26sdp"
                android:layout_marginTop="@dimen/_14sdp"
                android:background="@drawable/bg_active_button"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:text="@string/update_matdan_time"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/White"
                android:fontFamily="@font/poppins_medium"
                android:includeFontPadding="false"
                android:textAllCaps="false"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/_26sdp"
                android:layout_marginTop="@dimen/_14sdp"
                android:background="@drawable/bg_active_button"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:text="@string/change_app_language"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/White"
                android:fontFamily="@font/poppins_medium"
                android:includeFontPadding="false"
                android:textAllCaps="false"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:id="@+id/viewBottom"
            android:layout_width="0dp"
            android:layout_height="@dimen/_50sdp"
            android:background="@drawable/wave_up"
            android:backgroundTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
