<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llVoters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorDustyWhite">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/_3sdp"
            android:paddingHorizontal="@dimen/_16sdp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:paddingLeft="4dp"
                    android:text="@string/part_number"
                    android:textColor="@color/Black"
                    android:textSize="@dimen/_11ssp"
                    android:includeFontPadding="false"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:paddingLeft="4dp"
                    android:text="@string/from"
                    android:textColor="@color/Black"
                    android:textSize="@dimen/_11ssp"
                    android:includeFontPadding="false"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lblPartFrom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:paddingLeft="4dp"
                    android:text="1"
                    android:textColor="@color/Black"
                    android:textSize="@dimen/_11ssp"
                    android:includeFontPadding="false" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:paddingLeft="4dp"
                    android:text="@string/to"
                    android:textColor="@color/Black"
                    android:textSize="@dimen/_11ssp"
                    android:includeFontPadding="false" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lblPartTo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:paddingLeft="4dp"
                    android:text="10"
                    android:textColor="@color/Black"
                    android:textSize="@dimen/_11ssp"
                    android:includeFontPadding="false" />

            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btnSync"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/synch2" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:id="@+id/viewDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/llAll"
            android:background="@color/colorLightGray" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>
